--- a/tex/Text/6.Conclusion.tex
+++ b/tex/Text/6.Conclusion.tex
@@ -1,3 +1,13 @@
 \chapter{Conclusions}  \label{chapfinal}
 
+In this dissertation, it is presented how through Natural Language Processing and sentiment analysis techniques it is possible to better understand what happens in the economic scenario. Taking for example previous studies, the previous results obtained in \cite{shapiro2020measuring}, through the variable selection models and in \cite{shapiro2020measuring, barsky2012information}, through the responses of the impulse response functions, were corroborated.\\
 
+The sentiment indexes created in this work were elaborated from the speeches of the European Central Bank for a stipulated period from January 2005 to December 2020, the \href{https://github.com/gustavovital/Dissertation}{Repository} of dissertation presents the algorithms and codes developed for the elaboration of this work.The sentiment indices obtained are based on two main lexicons: VADER \cite[]{hutto2014vader} and LM-SA-2020 \cite[]{lmdata}. The first being a lexicon based on valence and the second a lexicon based on polarity, in order to incorporate in this work two ``options'' of different indices that relate to economic activity.\\
+
+When in relation to the variable selection models, both indices were significant when estimated as predictors of economic activity variables. The LASSO, Adaptive LASSO and Elastic Net models showed that indices can be effectively incorporated into economic models in order to contribute to a greater predictive capacity of the model. For the VADER sentiment index, the variable selection model that stands out is the LASSO, in accordance with the metric evaluation measures; On the other hand, when analyzing the LM-SA-2020 sentiment index, the model for selecting variables that stands out is the Elastic Net. Through these models it was possible to capture the possibility of the predictive capacity of the indices in real economic variables. The variables that did not show statistical significance for the VADER sentiment index and LM-SA-2020 were only Unemployment Rate and Consumer Price Index, even so, at least one of the models (LASSO, Adaptive LASSO and Elastic Net) considers the inclusion of indices when one of these variables is an independent variable.\\
+
+The estimated VAR models showed statistical significance when considering the responses of economic variables to a shock in sentiment indices. When considering a shock to the VADER index, the responses of the Unemployment Rate and Consumer Price Index variables were not significant; when considering the LM-SA-2020 index, only the response of the Consumer Price Index variable proved to be non-significant -- Output gap; Unemployment Rate; Producer Price Index; and Long-Term Government Bond Yields showed a significant response to a shock in the sentiment index variable LM-SA-2020.\\
+
+Even with a high correlation between the indices, the variables behaved differently when compared to the different indices. This can be explained by the fact that only one of the indices has an economic basis \cite[]{loughran2011liability}. This fact can also corroborate the point raised by \cite{loughran2011liability, shapiro2020measuring}, where an index of economic sentiments that was not based on an economic lexicon could bring spurious results for economic estimations.\\
+
+In general, this work presents promising results for the applicability of Natural Language Processing techniques when applied to the field of economic science. Still, the estimated sentiment indices were able to predict and even relate to macroeconomic variables. Economic activity, as shown in this work, or even in previous works \cite[]{shapiro2020measuring, barsky2012information}, appeared to respond intuitively to shocks in the VADER and LM-SA-2020 sentiment indices. As much as sentiment analysis and text mining techniques have begun to appear in the economic literature in recent years, this field shows to be highly promising: with the advancement of computer technology and with an advance in NLP techniques, economic science would gain much in an area of research still little explored.
