--- a/tex/main.tex
+++ b/tex/main.tex
@@ -90,13 +90,13 @@ BoldItalicFont=GARA.ttf,
 \newpage
 
 \input{Text/0.Author.tex}
-\addcontentsline{toc}{section}{Biographical note}
+%\addcontentsline{toc}{section}{Biographical note}
 \setcounter{page}{2}
 
 \newpage
-\input{Text/1.Acknowledgement.tex}
-\addcontentsline{toc}{section}{Acknowledgements}
-\setcounter{page}{3}
+%\input{Text/1.Acknowledgement.tex}
+%\addcontentsline{toc}{section}{Acknowledgements}
+%\setcounter{page}{3}
 
 
 
