--- a/tex/Text/2.Abstract.tex
+++ b/tex/Text/2.Abstract.tex
@@ -1,12 +1,11 @@
 
 \chapter*{Abstract}
-This work aims to relate the press conferences of the European central bank, for a period defined later, with the macroeconomic scenario and with real European macroeconomic variables. As exposed by Shapiro (2019a, 2019b, 2020) it is possible to better understand what happens in the real economy from minutes and reports from central banks, allowing a correlation with different macroeconomic scenarios. The methodology used encompasses natural language processing techniques, in terms of tokenization. The tested relationships take into account endogeneities in the macroeconomic scenario and an autoregressive vector is defined in order to correct the problem. Finally, impulse response functions will be used for model simulations that corroborate the approach used.
-
+This work intends to relate the press conferences of the European Central Bank, for a period from January 2005 to December 2020, with the macroeconomic scenario and with real European macroeconomic variables. As exposed by \cite[]{shapiro2020measuring, shapiro2021taking} and \cite[]{barsky2012information} it is possible to better understand what happens in the real economy from sentiment indices. This work follows \cite{shapiro2020measuring} when the author exposes the possibility of an economic index obtained by Natural Language Processing techniques through minutes and central bank reports, allowing a correlation with different macroeconomic scenarios. The methodology used includes processing techniques of Natural Language Processing and Sentiment Analysis. To relate the indices with macroeconomic variables, variable selection models are used (LASSO, Adaptive Lasso and Elastic Net). Furthermore, impulse response functions are obtained for a shock to the index and it is analyzed how the macroeconomic variables respond to a shock in the economic sentiment index.
 \par
 \vspace{0.5in}    
     
 \noindent
-{\bf Keywords:} Sentiment analysis, Central bank, Text mining, Vector Autoregressive
+{\bf Keywords:} Sentiment Analysis, Central Bank, Vector Autoregressive, Variable Selection Models.
 
 
 
